--- a/HAMILTON.html
+++ b/HAMILTON.html
@@ -330,7 +330,7 @@
     <br>
     <h2>Score</h2>
     <div class="flex-row sa">
-        <input name="Mot" type="text" id="total" disabled class="res-asdas margin0 widthAuto" />
+        <div id="total" class="res-asdas margin0 widthAuto"></div>
     </div>
     <br>
     <div class="export">
@@ -490,7 +490,7 @@
             }
         }
 
-        document.form.total.value = g1 + g2 + g3 + g4 + g5 + g6 + g7 + g8 + g9 + g10 + g11 + g12 + g13 + g14 + g15 + g16 + g17 ;
+        document.getElementById("total").innerText = g1 + g2 + g3 + g4 + g5 + g6 + g7 + g8 + g9 + g10 + g11 + g12 + g13 + g14 + g15 + g16 + g17 ;
     }
 </script>
 </body>
