--- a/EIFEL.html
+++ b/EIFEL.html
@@ -241,8 +241,10 @@
 
     <div class="score_result">
         <h2 class="left">Score :</h2>
-        <input name="Resultat" type="text" id="Resultat" style="" disabled  />
-        <span id="score_result_confirm">/24</span>
+        <div class="flex-row center">
+            <div id="Resultat" style=""></div>
+            <span id="score_result_confirm">/24</span>
+        </div>
     </div>
 
 </form>
@@ -259,17 +261,13 @@
 <span class="legalinfo"><br/><br/>L'évaluation d'un patient est avant tout clinique et/ou biologique. Le traitement d'un patient ne peut reposer sur le seul résultat de ce site.</span>
 
 <script type="text/javascript">
-    // Fonction de calcul de la page
     function f_Calculer()
     {
-        // calcul du résultat
         var Res = 0;
         for(var i=1; i<25; i++)
             Res += f_GetRadioValue('vItem'+i)*1;
 
-        // Affichage du résultat
-        document.Form.Resultat.value = Res;
-
+        document.getElementById("Resultat").innerText = Res;
 
     }
 </script>
