--- a/acr_1997.html
+++ b/acr_1997.html
@@ -108,21 +108,13 @@
         </tr>
     </table>
     <br />
-    <!--<h2 class="total">Score :</h2>-->
-    <!--<div class="flex-column center">-->
-        <!--<div class="flex-row">-->
-        <!--<input class="margin0 acr_eular_2010-input center" name="Resultat" type="text" id="Resultat" disabled /><br>-->
-            <!--<span id="score_result_confirm">/11</span><br>-->
-            <!--<label for="Resultat"></label>-->
-        <!--</div>-->
-        <!--<input class="acr_eular_2010-result" name="Mot" type="text" id="reponse" disabled /><label for="reponse"></label>-->
-    <!--</div>-->
-
     <div class="score_result">
         <h2 class="left">Score : </h2>
-        <input name="Resultat" type="text" id="Resultat" disabled  />
-        <span id="score_result_confirm">/11</span><br>
-        <input class="reponse" name="Mot" type="text" id="reponse" disabled />
+        <div class="flex-row center">
+            <div type="text" id="Resultat" ></div>
+            <span id="score_result_confirm">/11</span><br>
+            <div class="reponse" type="text" id="reponse"></div>
+        </div>
     </div>
 </form>
 <br>
@@ -137,24 +129,21 @@
 <span class="legalinfo"><br/><br/>L'évaluation d'un patient est avant tout clinique et/ou biologique. Le traitement d'un patient ne peut reposer sur le seul résultat de ce site.</span>
 
 <script type="text/javascript">
-    // Fonction de calcul de la page
     function f_Calculer()
     {
-        // calcul du résultat
         var Res = 0;
         for(var i=1; i < 25; i++)
             Res += f_GetRadioValue('vItem'+i)*1;
 
         var test = "" ;
         if (Res >= 4) {
-            test = "Positif";
+            test = " Positif";
         } else {
-            test = "Négatif";
+            test = " Négatif";
         }
 
-        // Affichage du résultat
-        document.Form.Resultat.value = Res;
-        document.Form.reponse.value = test;
+        document.getElementById("Resultat").innerText = Res;
+        document.getElementById("reponse").innerText = test;
     }
 </script>
 
