ajout du bouton d'export en PDF v2

--- a/ACR_2010.html
+++ b/ACR_2010.html
@@ -350,7 +350,7 @@
 
 <br>
 <br>
-<div class="export">
+<div id="export" class="export">
     <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
 </div>
 <br>
