--- a/ACR_EULAR_2010.html
+++ b/ACR_EULAR_2010.html
@@ -76,7 +76,7 @@
                 <div class="acr_eular_2010-result" type="text" id="ResultatMessage" ></div>
             </div>
             <br>
-            <div class="export">
+            <div id="export" class="export">
                 <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
             </div>
             <br>
