--- a/asas_axiale.html
+++ b/asas_axiale.html
@@ -117,7 +117,7 @@
     <span>CRP augmentée</span>
 </label>
 <br>
-<div class="export">
+<div id="export" class="export">
     <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
 </div>
 <br>
