--- a/asas_peripherique.html
+++ b/asas_peripherique.html
@@ -111,7 +111,7 @@
     </label>
 </div>
 <br>
-<div class="export">
+<div id="export" class="export">
     <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
 </div>
 <div class="score_inter">Interprétation</div>
