--- a/HAMILTON.html
+++ b/HAMILTON.html
@@ -333,7 +333,7 @@
         <div id="total" class="res-asdas margin0 widthAuto"></div>
     </div>
     <br>
-    <div class="export">
+    <div id="export" class="export">
         <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
     </div>
 </form>
