--- a/QIF.html
+++ b/QIF.html
@@ -763,7 +763,8 @@
 </form>
 <br>
 <br>
-<div class="export">
+
+<div id="export" class="export">
     <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
 </div>
 <br>
