--- a/diagnostic.html
+++ b/diagnostic.html
@@ -217,7 +217,8 @@
 </div>
 <br>
 <br>
-<div class="export">
+
+<div id="export" class="export">
     <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
 </div>
 <br>
