--- a/dreiser.html
+++ b/dreiser.html
@@ -195,7 +195,7 @@
                 <div class="margin0 input center" type="number" id="total"></div>
             </div>
             <br>
-            <div class="export">
+            <div id="export" class="export">
                 <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
             </div>
             <br>
