--- a/lequesne-hanche.html
+++ b/lequesne-hanche.html
@@ -187,7 +187,7 @@
                 <div class="input margin0" style="max-width: 100%;" type="number" id="total"></div>
             </div>
             <br>
-            <div class="export">
+            <div id="export" class="export">
                 <button title="exporter en pdf" id="exportBtn" class="export-btn" onclick="window.print();" target="_blank"><i class="fas fa-file-pdf"></i> Exporter en PDF</button>
             </div>
             <br>
